[package]
name = "shiyanyi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.5.1", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.1", features = ["csr", "nightly"] }
web-sys = { version = "0.3.64", features = ["Window", "Performance"] }
stylers = "0.3.1"
