[package]
name = "shiyanyi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
itertools = "0.12.0"
leptos = { version = "0.5.1", features = ["csr", "nightly"] }
leptos_dom = { version = "0.5.1", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.1", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.1", features = ["csr", "nightly"] }
stylers = "0.3.1"
web-sys = { version = "0.3.64", features = [
    "Window",
    "Performance",
    "Element",
    "HtmlElement",
    "MediaQueryList",
    "EventTarget",
    "EventListener",
] }
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
