[package]
name = "shiyanyi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
itertools = "0.13"
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_dom = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
leptos-use = "0.10"
stylers = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Performance",
    "Element",
    "HtmlElement",
    "HtmlCollection",
    "MediaQueryList",
    "EventTarget",
    "EventListener",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
flate2 = "1"
